--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <div class="header">
       <img src="images/logo.png" alt="Coral logo" />
-      <h1>Amil Genome Browser</h1>
-      <p>Visualize miRNAs, lncRNAs, and genomic features for <i>Acropora millepora</i>.</p>
+      <h1>Deeper Dive Genome Browser</h1>
+      <p>Visualize miRNAs, lncRNAs, and genomic features for three awesome species.</p>
     </div>
     <jbrowse-root config="config.json"></jbrowse-root>
     <script type="module" src="jbrowse-web/dist/jbrowse-web.esm.js"></script>
