--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Visualize miRNAs, lncRNAs, and genomic features for three awesome species.</p>
     </div>
 
-    <jbrowse-root config="config.json"></jbrowse-root>
+    <jbrowse-root config="./config.json"></jbrowse-root>
 
     <!-- ✅ Load JBrowse Web from official CDN -->
     <script type="module" src="https://unpkg.com/@jbrowse/web@latest/dist/jbrowse-web.esm.js"></script>
