--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>JBrowse Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body { margin: 0; font-family: sans-serif; }
-      .header { text-align: center; background: #e0f7fa; padding: 20px; }
-    </style>
-  </head>
-  <body>
-    <div class="header">
-      <h1>JBrowse Genome Viewer</h1>
-      <p>Hosted on GitHub Pages</p>
-    </div>
-
-    <jbrowse-root config="./config.json"></jbrowse-root>
-
-    <script type="module" src="https://unpkg.com/@jbrowse/web@latest/dist/jbrowse-web.esm.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="A fast and flexible genome browser"/><link rel="manifest" href="./manifest.json"/><title>JBrowse</title><script defer="defer" src="static/js/main.0e9c0dc7.js"></script></head><body style="overscroll-behavior:none"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
